// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkHorizontalNav should render correctly 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav bpk-horizontal-nav--show-underline"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with "showUnderline" set to false 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with arbitrary props 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav bpk-horizontal-nav--show-underline"
  data-arbitrary-1="arbirary-value-1"
  data-arbitrary-2="arbirary-value-2"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with custom "className" prop 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav bpk-horizontal-nav--show-underline my-custom-class-name"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with custom "leadingScrollIndicatorClassName" prop 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav bpk-horizontal-nav--show-underline"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;

exports[`BpkHorizontalNav should render correctly with custom "trailingScrollIndicatorClassName" prop 1`] = `
<div
  className="bpk-mobile-scroll-container bpk-horizontal-nav bpk-horizontal-nav--show-underline"
  style={
    Object {
      "height": "auto",
    }
  }
>
  <div
    className="bpk-mobile-scroll-container__scroller"
    onScroll={[Function]}
  >
    <nav
      className="bpk-mobile-scroll-container__inner"
    >
      <div
        className="bpk-horizontal-nav__list"
        role="tablist"
      >
        My nav content.
      </div>
    </nav>
  </div>
</div>
`;
